# flaschenwand

./: .gitignore  README.md  material.md  material.txt  pyproject.toml  requirements.txt
doc/: Kaufen.ods  Sketch.fzz  Sketch2.fzz  display.ase
src/: __init__.py  abc.py  abc_scroller.py  aus.py  blue.py  demo_farbwechsler.py  demo_hallo_welt_scroller.py  demo_plasma.py  demo_plasma_circular.py  demo_plasma_rotating.py  fade_to_green.py  flaschenwand.py  flaschenwand_gui.py  green.py  midi.ini  midi.py  midi_tester.py  osc.ini  oscserver.py  red.py  requirements.txt  scroll_text.py  server.py  starter.py  test_flaschenwand.py  wled.py
