[tool.poetry]
name = "flaschenwand"
version = "0.1.0"
description = ""
authors = ["Marco Bakera <marco@bakera.de>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
bottle = "^0.12.25"
python-osc = "^1.8.3"
rpi-ws281x = "^5.0.0"
paho-mqtt = "^1.6.1"
neopixel = "^0.0.1"
python-rtmidi = "^1.5.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
